// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`businessActions Dispatches the correct action and payload (checkButtons) 1`] = `
Array [
  Object {
    "type": "CHECK_BUTTONS",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (lowerPrice) 1`] = `
Array [
  Object {
    "type": "LOWER_PRICE",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (makePaperclip) 1`] = `
Array [
  Object {
    "type": "MAKE_PAPERCLIP",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (sellPaperclips) 1`] = `
Array [
  Object {
    "type": "START_SELLING",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (startUpdatingUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "START_UPDATING_UNSOLD_INVENTORY",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (stopUpdatingUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "STOP_UPDATING_UNSOLD_INVENTORY",
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateFunds) 1`] = `
Array [
  Object {
    "type": "UPDATE_FUNDS",
    "value": 5,
  },
]
`;

exports[`businessActions Dispatches the correct action and payload (updateUnsoldInventory) 1`] = `
Array [
  Object {
    "type": "UPDATE_UNSOLD_INVENTORY",
  },
]
`;
